--- a/tests/requirements.txt
+++ b/tests/requirements.txt
@@ -5,10 +5,12 @@
 playwright>=1.40.0
 pytest-playwright>=0.4.0
 pytest>=7.4.0
+pytest-asyncio>=0.21.0
 
 # Streamlit testing utilities
 streamlit>=1.28.0
 
 # Test utilities
 coverage>=7.0.0
+requests>=2.27.0
 
