--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,7 @@ streamlit>=1.28.0
 langchain-core>=0.1.0
 langchain-openai>=0.1.0
 langchain>=0.1.0
+langgraph>=0.2.0
 pydantic>=2.0.0
 coverage>=7.0.0
 python-dotenv>=1.0.0
