--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
 pyyaml>=6.0
 yamale>=4.0.0
 streamlit>=1.28.0
+streamlit-kanban-board-goviceversa>=1.2.0
 langchain-core>=0.1.0
 langchain-openai>=0.1.0
 langchain>=0.1.0
