WIP: Bi-directional Kanban component - UI renders and drag-drop works
- Converted from components.html() to components.declare_component()
- Created TypeScript/Vite frontend with streamlit-component-lib
- Migrated HTML/CSS/JS from kanban.html to index.tsx
- Updated Python to use declare_component() and process return values
- Removed postMessage/URL query parameter handling
- Build system configured (dev and prod modes)
- Component loads and drag-drop functional

Known issue: Excessive requests per second - needs event-driven fix

--- a/.gitignore
+++ b/.gitignore
@@ -58,6 +58,10 @@ tmp/
 *.png
 *.html
 
+# Frontend build artifacts
+crewkan/kanban_native/frontend/node_modules/
+crewkan/kanban_native/frontend/build/
+
 # Environment variables
 .env
 .env.local
